Implementacion de la descripcion en head index

--- a/index.html
+++ b/index.html
@@ -1,51 +1,56 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="CSS/estilos.css">
-    <title>Usando Grid</title>
-  </head>
-  <body>
-    <h1>Galería de imágenes con Grid</h1>
-    <div class="gallery_container">
-      <div class="gallery__item">
-        <img src="img/img5.jpg" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 1</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="http://lorempixel.com/500/500/food" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 2</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="img/img6.jpg" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 3</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="img/img4.jpg" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 4</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="img/img1.jpg" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 5</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="http://lorempixel.com/350/230/" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 6</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="http://lorempixel.com/500/500/food/1" alt="" class="gallery__img" /><!-- aumentar uno en link de las imagenes -->
-        <h2 class="gallery__title">Imagen 7</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="http://lorempixel.com/500/500/food/1" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 8</h2>
-      </div>
-      <div class="gallery__item">
-        <img src="img/img3.jpg" alt="" class="gallery__img" />
-        <h2 class="gallery__title">Imagen 9</h2>
-      </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Explora una impresionante galería de imágenes con diseños modernos y atractivos, creado con la potencia de CSS Grid. Navega a través de una colección única de imágenes, cada una con su propia historia. Descubre cómo el diseño web puede combinar la estética visual y la funcionalidad en esta emocionante galería de imágenes con Grid." />
+  <link rel="stylesheet" href="./CSS/estilos-dist.css">
+  <title>Usando Grid</title>
+</head>
+
+<body>
+  <h1>Galería de imágenes con Grid</h1>
+  <div class="gallery_container">
+    <div class="gallery__item">
+      <img src="./img/img5.jpg" alt="Imagen1" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 1</h2>
     </div>
-  </body>
+    <div class="gallery__item">
+      <img src="./img/img2.jpg" alt="Imagen2" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 2</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img6.jpg" alt="Imagen3" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 3</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img4.jpg" alt="Imagen4" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 4</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img1.jpg" alt="Imagen5" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 5</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img7.jpg" alt="Imagen6" class="gallery__img" />
+      <h2 class="gallery__title">Imagen 6</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img8.jpg" alt="Imagen7" class="gallery__img" loading="lazy" />
+      <!-- aumentar uno en link de las imagenes -->
+      <h2 class="gallery__title">Imagen 7</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img9.jpg" alt="Imagen8" class="gallery__img" loading="lazy" />
+      <h2 class="gallery__title">Imagen 8</h2>
+    </div>
+    <div class="gallery__item">
+      <img src="./img/img10.jpg" alt="Imagen9" class="gallery__img" loading="lazy" />
+      <h2 class="gallery__title">Imagen 9</h2>
+    </div>
+  </div>
+</body>
+
 </html>
