Aumento de las Meta Tags y previsualizacion del proyecto

--- a/index.html
+++ b/index.html
@@ -5,9 +5,27 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Explora una impresionante galería de imágenes con diseños modernos y atractivos, creado con la potencia de CSS Grid. Navega a través de una colección única de imágenes, cada una con su propia historia. Descubre cómo el diseño web puede combinar la estética visual y la funcionalidad en esta emocionante galería de imágenes con Grid." />
+  <meta name="description"
+    content="Explora una impresionante galería de imágenes con diseños modernos y atractivos, creado con la potencia de CSS Grid. Navega a través de una colección única de imágenes, cada una con su propia historia. Descubre cómo el diseño web puede combinar la estética visual y la funcionalidad en esta emocionante galería de imágenes con Grid." />
   <link rel="stylesheet" href="./CSS/estilos-dist.css">
   <title>Usando Grid</title>
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kevinrivera1.github.io/Galeria-Grid/" />
+  <meta property="og:title" content="Diseño de una Moderna Galería de Imágenes con CSS Grid" />
+  <meta property="og:description"
+    content="Explora una impresionante galería de imágenes con diseños modernos y atractivos, creado con la potencia de CSS Grid. Navega a través de una colección única de imágenes, cada una con su propia historia. Descubre cómo el diseño web puede combinar la estética visual y la funcionalidad en esta emocionante galería de imágenes con Grid." />
+  <meta property="og:image" content="https://i.ibb.co/s5J2cqn/cap-img.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://kevinrivera1.github.io/Galeria-Grid/" />
+  <meta property="twitter:title" content="Diseño de una Moderna Galería de Imágenes con CSS Grid" />
+  <meta property="twitter:description"
+    content="Explora una impresionante galería de imágenes con diseños modernos y atractivos, creado con la potencia de CSS Grid. Navega a través de una colección única de imágenes, cada una con su propia historia. Descubre cómo el diseño web puede combinar la estética visual y la funcionalidad en esta emocionante galería de imágenes con Grid." />
+  <meta property="twitter:image" content="https://i.ibb.co/s5J2cqn/cap-img.png" />
+
 </head>
 
 <body>
